--- a/style.css
+++ b/style.css
@@ -164,9 +164,9 @@ img.len {
   align-items: center;
   box-shadow: 0 5px 15px rgba(0, 0, 0, 0.5);
   transition: 0.4s;
-   direction: ltr;   
+  direction: ltr;
   unicode-bidi: embed;
-  }
+}
 .books .book:hover {
   transform: translateY(-10px);
   box-shadow: 0px 18px 10px 3px rgba(0, 0, 0, 0.5);
@@ -210,7 +210,46 @@ img.len {
   box-shadow:
     inset 1px 0px 9px 2px rgba(0, 0, 0, 0.5),
     1px 0px 9px 2px rgba(0, 0, 0, 0.5);
+  position: relative;
   display: none;
+}
+.model-add-box #btnX,
+.model-add-book #btnX,
+.model-delete #btnX {
+  position: absolute;
+  right: 15px;
+  top: 15px;
+  width: 35px;
+  height: 35px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-family: Arial, sans-serif;
+  font-size: 20px;
+  font-weight: bold;
+  color: #ff4d4d; 
+  cursor: pointer;
+  background-color: rgb(255, 255, 255,.1);
+  backdrop-filter: blur(10px);
+  border-radius: 50%;
+  border: 1px solid #db9494;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1), 0 1px 3px rgba(0, 0, 0, 0.08);
+  transition: 0.3s ease;
+  user-select: none; 
+}
+
+.model-add-box #btnX:hover,
+.model-add-book #btnX:hover,
+.model-delete #btnX:hover {
+  background-color: #ff4d4d;
+  color: white;
+  transform: rotate(90deg); 
+  box-shadow: 0 6px 12px rgba(255, 77, 77, 0.3);
+}
+.model-add-box #X:active,
+.model-add-book #X:active,
+.model-delete #X:active {
+  transform: scale(0.9) rotate(90deg);
 }
 .model-add-book {
   background-image: url(model.png);
@@ -277,7 +316,7 @@ img.len {
   align-items: center;
   justify-content: center;
   font-weight: bold;
-  font-size: 1.3rem;
+  font-size: 21px;
   color: #fff;
   position: fixed;
   bottom: 25px;
@@ -403,7 +442,7 @@ button.disabled {
 
 @media screen and (max-width: 1024px) {
   .btns {
-    width: 80%; 
+    width: 80%;
   }
 
   .box-details {
@@ -412,25 +451,24 @@ button.disabled {
 
   .books {
     width: 90%;
-    justify-content: center; 
+    justify-content: center;
   }
 
   .model-add-box,
   .model-add-book,
   .model-delete {
-    width: 80vw; 
-    height: auto; 
-    max-height: 90vh; 
+    width: 80vw;
+    height: auto;
+    max-height: 90vh;
     overflow-y: auto;
   }
 }
 
 @media screen and (max-width: 768px) {
- 
   .container h1 {
     font-size: 1.5rem;
     padding: 15px;
-    border-width: 5px; 
+    border-width: 5px;
   }
 
   .btns {
@@ -442,16 +480,16 @@ button.disabled {
 
   .btns button:first-child,
   .btns button:last-child {
-    width: 100%; 
+    width: 100%;
   }
 
   .box-details {
     width: 95%;
     padding: 10px;
   }
-  
+
   img.len {
-    width: 100%; 
+    width: 100%;
     height: auto;
   }
   .books {
@@ -498,7 +536,7 @@ button.disabled {
   .model-delete h1 {
     font-size: 1.5rem;
   }
-  
+
   .model-delete label b {
     font-size: 1.2rem;
   }
